fix typos + favicon

--- a/themes/adidoks/templates/index.html
+++ b/themes/adidoks/templates/index.html
@@ -84,7 +84,7 @@
   <div class="container">
     <div class="row justify-content-center text-center">
       <h2 class="h4">Making web crawling approachable</h2>
-      <p>Web crawling and scraping can be a difficult, niche topic to approach. Scout attempts to solve that by combining a simple easy to learn syntax with powerful and modern web crawling technology. Gain programmatic access to web data with just a few lines of Scout code!</p>
+      <p>Web crawling and scraping can be a difficult topic to approach. Scout solves that by combining a simple, easy to learn syntax with powerful and modern web crawling technology. Gain programmatic access to web data with just a few lines of Scout code!</p>
       <img src="demo.gif">
     </div>
   </div>
